--- a/configs/wifi/WCNSS_qcom_cfg.ini
+++ b/configs/wifi/WCNSS_qcom_cfg.ini
@@ -52,6 +52,11 @@ gEnableApUapsd=1
 # Fixed Rate
 gFixedRate=0
 
+# TheCrazyLex@PA Prefer connecting to 5Ghz AP
+# even if its RSSI is lower by 3dBm than the 2.4Ghz AP
+gRoamPrefer5GHz=1
+gSelect5GHzMargin=3
+
 # Maximum Tx power
 # gTxPowerCap=30
 
